--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,8 @@ after_success:
   - docker build -t markjpk/multi-nginx ./nginx
   - docker build -t markjpk/multi-server ./server
   - docker build -t markjpk/multi-worker ./worker
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - docker push markjpk/multi-client
+  - docker push markjpk/multi-nginx
+  - docker push markjpk/multi-server
+  - docker push markjpk/multi-worker
