Add deploy to .travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,14 @@ before_install:
 script:
   - docker run -e CI=true markjpk/react-test npm run test
 
-after_success:
-  - docker build -t markjpk/multi-client ./client
-  - docker build -t markjpk/multi-nginx ./nginx
-  - docker build -t markjpk/multi-server ./server
-  - docker build -t markjpk/multi-worker ./worker
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push markjpk/multi-client
-  - docker push markjpk/multi-nginx
-  - docker push markjpk/multi-server
-  - docker push markjpk/multi-worker
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-2"
+  app: "multi-docker"
+  env: "Multi-docker-env-1"
+  bucket_name: "elasticbeanstalk-eu-west-2-142272235652"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
