--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -17,6 +17,24 @@ spec:
         - name: server
           image: pve-gitlab.retrosplash.net:5050/kubernetes/docker-kubernetes-course/complex/multi-server
           imagePullPolicy: Always
+          env:
+            - name: REDIS_HOST
+              value: redis-cluster-ip-service
+            - name: REDIS_PORT
+              value: '6379'
+            - name: PGUSER
+              value: postgres
+            - name: PGHOST
+              value: postgres-cluster-ip-service
+            - name: PGPORT
+              value: '5432'
+            - name: PGDATABASE
+              value: postgres
+            - name: PGPASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: pgpassword
+                  key: PGPASSWORD
           ports:
             - containerPort: 5000
       imagePullSecrets:
