--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -17,5 +17,10 @@ spec:
         - name: worker
           image: pve-gitlab.retrosplash.net:5050/kubernetes/docker-kubernetes-course/complex/multi-worker
           imagePullPolicy: Always
+          env:
+            - name: REDIS_HOST
+              value: redis-cluster-ip-service
+            - name: REDIS_PORT
+              value: '6379'
       imagePullSecrets:
         - name: gitlab-registry-credentials
