Update to use new secret.

--- a/k8s/client-deployment.yaml
+++ b/k8s/client-deployment.yaml
@@ -20,4 +20,4 @@ spec:
           ports:
             - containerPort: 3000
       imagePullSecrets:
-        - name: gitlab-registry-credentials
+        - name: registry-12
