--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -38,4 +38,4 @@ spec:
           ports:
             - containerPort: 5000
       imagePullSecrets:
-        - name: gitlab-registry-credentials
+        - name: registry-12
