--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -23,4 +23,4 @@ spec:
             - name: REDIS_PORT
               value: '6379'
       imagePullSecrets:
-        - name: gitlab-registry-credentials
+        - name: registry-12
