Minor changes to the configuration files.

--- a/k8s/database-persistent-volume-claim.yaml
+++ b/k8s/database-persistent-volume-claim.yaml
@@ -4,6 +4,7 @@ metadata:
   name: database-persistent-volume-claim
   namespace: complex
 spec:
+  storageClassName: nfs-csi
   accessModes:
     - ReadWriteOnce
   resources:
