--- a/k8s-gitlab/redis-deployment.yaml
+++ b/k8s-gitlab/redis-deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: client-deployment
+  name: redis-deployment
   namespace: complex
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      component: web
+      component: redis
   template:
     metadata:
       labels:
-        component: web
+        component: redis
     spec:
       containers:
-        - name: client
-          image: markjpk/multi-client
+        - name: redis
+          image: redis
           imagePullPolicy: Always
           ports:
-            - containerPort: 3000
+            - containerPort: 6379
