--- a/k8s-gitlab/worker-deployment.yaml
+++ b/k8s-gitlab/worker-deployment.yaml
@@ -15,10 +15,12 @@ spec:
     spec:
       containers:
         - name: worker
-          image: markjpk/multi-worker
+          image: pve-gitlab.retrosplash.net:5050/kubernetes/docker-kubernetes-course/complex/multi-worker
           imagePullPolicy: Always
           env:
             - name: REDIS_HOST
               value: redis-cluster-ip-service
             - name: REDIS_PORT
               value: '6379'
+      imagePullSecrets:
+        - name: registry-12
